<resources>
    <string name="app_name">Companion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_parish">Parish</string>
    <string name="menu_news">News</string>
    <string name="menu_readings">Daily Reading</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_catechism">Catechism</string>
    <string name="menu_prayers">Prayers</string>
    <string name="admin">Admin</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact Us</string>
    <string name="powered_by">Powered by  KingsTeck</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="catholic_companion">Catholic Companion</string>
    <string name="news">News</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="new_addition">New Addition</string>
    <string name="update">Update</string>
    <string name="select_category">Select Category </string>
    <string name="select_parish">Select Parish </string>
    <string name="previous_year">Previous Year</string>
    <string name="next_year">Next Year</string>
    <string name="log_in_as_contributor">Log in as Contributor</string>
    <string name="click_here">Click Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_last_name">Enter Last name</string>
    <string name="user_name">User Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
</resources>