<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/top_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <group
        android:id="@+id/bottom_menu"
        android:checkableBehavior="none">
        <item
            android:id="@+id/admin"
            android:title="@string/admin"
            />
        <item
            android:id="@+id/settings"
            android:title="@string/setting"
            />
        <item
            android:id="@+id/contact_us"
            android:title="@string/contact_us"
            />

        <item
            android:id="@+id/share"
            android:title="@string/share_with_friends"
            />

        <item
            android:id="@+id/powered_by"
            android:title="@string/powered_by"
            />

    </group>
</menu>