<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <ImageView
        android:id="@+id/imageView_nav_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/rosary_bible" />

    <TextView
        android:id="@+id/app_title_nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catholic_companion"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/app_address_nav_header"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_address_nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>