<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround_gradient_dark_main_color"
    tools:context=".ui.authentication.SingInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_church_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/et_first_name"
                app:layout_constraintStart_toStartOf="@+id/et_first_name" />


            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/backround_rounded_darker_light_color_update_screen"
                android:textCursorDrawable="@null"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:hint="@string/enter_first_name"
                android:maxLines="1"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_up" />

            <TextView
                android:id="@+id/first_name_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/enter_first_name"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/et_first_name"
                app:layout_constraintTop_toBottomOf="@+id/et_first_name" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/et_last_name"
                app:layout_constraintStart_toStartOf="@+id/et_last_name" />

            <EditText
                android:id="@+id/et_username_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/backround_rounded_darker_light_color_update_screen"
                android:textCursorDrawable="@null"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:hint="@string/enter_user_name"
                android:maxLines="1"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

            <TextView
                android:id="@+id/last_name_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/enter_last_name"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/et_last_name"
                app:layout_constraintTop_toBottomOf="@+id/et_last_name" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/et_username_name"
                app:layout_constraintStart_toStartOf="@+id/et_username_name" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/backround_rounded_darker_light_color_update_screen"
                android:textCursorDrawable="@null"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:hint="@string/enter_last_name"
                android:maxLines="1"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

            <TextView
                android:id="@+id/user_name_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/enter_user_name"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/et_username_name"
                app:layout_constraintTop_toBottomOf="@+id/et_username_name" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/et_email_address"
                app:layout_constraintStart_toStartOf="@+id/et_email_address" />

            <EditText
                android:id="@+id/et_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/backround_rounded_darker_light_color_update_screen"
                android:textCursorDrawable="@null"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:hint="@string/enter_email_address"
                android:maxLines="1"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_username_name" />

            <TextView
                android:id="@+id/email_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/enter_email_address"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/et_email_address"
                app:layout_constraintTop_toBottomOf="@+id/et_email_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/password_layout"
                app:layout_constraintStart_toStartOf="@+id/password_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/et_email_address" >

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backround_rounded_darker_light_color_update_screen"
                    android:drawableLeft="@drawable/ic_baseline_key_24"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textCursorDrawable="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/password_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_baseline_visibility_off_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/password_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/enter_password"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/password_layout"
                app:layout_constraintTop_toBottomOf="@+id/password_layout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/confirm_password_layout"
                app:layout_constraintStart_toStartOf="@+id/confirm_password_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/password_layout">

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backround_rounded_darker_light_color_update_screen"
                    android:drawableLeft="@drawable/ic_baseline_key_24"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textCursorDrawable="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/confirm_password_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_baseline_visibility_off_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/password_confirmation_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/enter_password"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/confirm_password_layout"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout" />

            <Button
                android:id="@+id/btn_sing_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/white"
                android:text="@string/sign_up"
                android:textColor="@color/main_color_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout" />

            <TextView
                android:id="@+id/tv_return_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/btn_sing_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_return_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_return_to_login" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/progress_bar"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                app:indicatorColor="@color/white"
                app:indicatorName="BallGridPulseIndicator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>